--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
 	
 	<uses-permission android:name="android.permission.READ_SMS" />
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	
     <uses-sdk
         android:minSdkVersion="8"
